atualização da index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <h1>Pagina inicial do Exercício</h1>
+    <a href="./exercício.html">Ir para pagina Exercício</a>
+
 </body>
 </html>
