corrigindo nome dobotão

--- a/exercício.html
+++ b/exercício.html
@@ -19,7 +19,7 @@
             <input id="senha" type="password" />
             <br />
             <button type="submit">
-            Enviar
+            Cadastrar
             </button>
     </form>
 </body>
